--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/react-input-mask": "^3.0.5",
+    "formik": "^2.4.6",
     "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "web-vitals": "^4.2.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
